<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/basicInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/basic_info"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />
    <TextView
        android:id="@+id/floor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/floor"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/type"
        app:layout_constraintTop_toBottomOf="@+id/type"
        app:layout_constraintVertical_bias="0.034" />
    <TextView
        android:id="@+id/_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintLeft_toRightOf="@+id/floor"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mediumField"
        app:layout_constraintVertical_bias="0.034" />
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basicInfo"
        app:layout_constraintVertical_bias="0.084" />
    <TextView
        android:id="@+id/mediumField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_house"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintLeft_toRightOf="@+id/type"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/basicInfo"
        app:layout_constraintVertical_bias="0.084" />
    <TextView
        android:id="@+id/zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zip"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/built"
        app:layout_constraintTop_toBottomOf="@+id/built"
        app:layout_constraintVertical_bias="0.047" />
    <TextView
        android:id="@+id/built"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/built_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toBottomOf="@+id/space"
        app:layout_constraintVertical_bias="0.034" />
    <TextView
        android:id="@+id/yearBuilt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2005"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintLeft_toRightOf="@+id/built"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spaceValue"
        app:layout_constraintVertical_bias="0.034" />
    <TextView
        android:id="@+id/zipNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_212122"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toRightOf="@+id/zip"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yearBuilt"
        app:layout_constraintVertical_bias="0.047" />
    <TextView
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spacious"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/floor"
        app:layout_constraintTop_toBottomOf="@+id/floor"
        app:layout_constraintVertical_bias="0.025" />
    <TextView
        android:id="@+id/spaceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_857_sqft"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintLeft_toRightOf="@+id/space"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_1"
        app:layout_constraintVertical_bias="0.025" />
    <TextView
        android:id="@+id/showMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_more"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zip"
        app:layout_constraintVertical_bias="0.171" />
    <!--
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMore"
        app:layout_constraintVertical_bias="0.162" /> -->
    <LinearLayout
        android:id="@+id/lineaSeparadora"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="60dp"
        android:background="#cccccc"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/showMore"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showMore"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintWidth_percent="1.0" />

    <ImageView
        android:background="@drawable/vertical_divider_1"
        android:id="@+id/roomView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineaSeparadora"
        app:srcCompat="@mipmap/alcoba" />

    <ImageView
        android:id="@+id/cookView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintLeft_toRightOf="@id/roomView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineaSeparadora"
        app:srcCompat="@mipmap/cocina" />

    <ImageView
        android:id="@+id/photosView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintLeft_toRightOf="@id/cookView"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineaSeparadora"
        app:srcCompat="@mipmap/photos" />


</androidx.constraintlayout.widget.ConstraintLayout>